tests/ui/associated-inherent-types/assoc-inherent-private.stderr
error[E0624]: associated type `P` is private
  --> $DIR/assoc-inherent-private.rs:10:10
   |
LL |         type P = ();
   |         ------ the associated type is defined here
...
LL | type U = m::T::P;
   |          ^^^^^^^ private associated type

error[E0624]: associated type `P` is private
  --> $DIR/assoc-inherent-private.rs:21:10
   |
LL |             pub(super) type P = bool;
   |             ----------------- the associated type is defined here
...
LL | type V = n::n::T::P;
   |          ^^^^^^^^^^ private associated type

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0624`.
